--- a/css/syle.css
+++ b/css/syle.css
@@ -12,6 +12,61 @@ a {
 header ul li {
     text-align: center;
     padding: 10px 0 10px 0;
-    
 
+}
+
+p {
+    line-height: 130%;
+}
+
+section.banner img {
+    width: 243;
+    height: 243;
+    top: 210px;
+    left: 760px;
+
+}
+
+section.banner {
+    text-align: center;
+    padding: 0 5% 0 5%;
+
+}
+
+section.banner h1 {
+    font-weight: bold;
+    font-size: 2rem;
+    margin: 10px 0 10px 0;
+}
+
+section.banner p button {
+    background-color: #FF6464;
+    color: #ffffff;
+    border: none;
+    display: inline-block;
+    margin: 10px;
+    padding: 5px 10px;
+
+}
+
+section.posts {
+    background-color: #EDF7FA;
+    padding: 10px;
+}
+
+section.posts h2{
+    text-align: center;
+    margin: 15px;
+}
+
+section.posts ul li {
+    background-color: #ffffff;
+    padding: 15px;
+    margin: 12px 10px 12px 10px;
+}
+
+section.posts ul li h3 {
+    font-weight: bold;
+    font-size: 1,2rem;
+    
 }
